// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<div>
  <svg
    height="400"
    width="100"
  />
</div>
`;

exports[`one feature 1`] = `
<div>
  <svg
    height="400"
    width="333.3333333333333"
  >
    <g>
      <path
        d="M 0.3 0 C 0.3 100, 1 100, 1 0"
        fill="transparent"
        pointer-events="stroke"
        stroke="#000000"
        stroke-opacity="1"
        stroke-width="2"
      />
      <text
        stroke="white"
        stroke-width="0.6em"
        x="0.6499999999999999"
        y="78"
      />
      <text
        stroke="black"
        x="0.6499999999999999"
        y="78"
      />
    </g>
  </svg>
</div>
`;

exports[`one semicircle 1`] = `
<div>
  <svg
    height="400"
    width="333.3333333333333"
  >
    <g>
      <path
        d="M 0.29999999999999993 4.286263797015736e-17 A 0.35 0.35 0 0 0 0.9999999999999999 0"
        fill="transparent"
        pointer-events="stroke"
        stroke="#000000"
        stroke-opacity="1"
        stroke-width="2"
      />
      <text
        stroke="white"
        stroke-width="0.6em"
        x="0.6499999999999999"
        y="3.35"
      />
      <text
        stroke="black"
        x="0.6499999999999999"
        y="3.35"
      />
    </g>
  </svg>
</div>
`;
